[package]
name = "echopulse"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[profile.release]
opt-level = 0
lto = "thin"
codegen-units = 1 # Reduces parallel codegen overhead, saving memory
strip = true
debug = false     # Ensures debug symbols aren't eating up RAM